2002-08-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Base.gsdoc: Moved to Documentation.
	* Source/GNUmakefile: Removed documentation building code.
	* Source/DocMakefile: New file for building refetrence documentation.
	* Documentation/Base.gsdoc: New from source directory.
	* Documentation/GNUmakefile: Set up installation directory name.
	* Documentation/Makefile.postamble: Use ../Source/DocMakefile to build
	library reference documentation and deal with installation.

2002-08-15  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Add NetBSD header/ldflag support (Patch from
	Peter Cooper).

	* Headers/gnustep/base/GNUstep.h: New compatibility file.

2002-08-15  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/GNUmakefile: Added -lgnustep-base and -lobjc to SSL_BUNDLE_LIBS
	So that bundle is linked with a dependency on these libraries ... to
	ensure that dynamic linkage works when the bundle is loaded in from
	java via jigs.

2002-08-15  Adam Fedor  <fedor@gnu.org>

	* SSL/configure.ac: Simplified check for libraries. Added socket
	lib check for Solaris.

	* Headers/gnustep/base/NSDecimalNumber.h: Add NSNumber category
	for decimalValue.
	* Source/NSDecimalNumber.m ([NSNumber -decimalValue]): Implemented.

2002-08-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Allow 'true' as boolean value
	* Source/NSConcreteNumber.m: Output 'YES' as boolean in description.
	* Source/NSNotificationCenter.m: Fix dumb memory leak.
	* Source/NSNumber.m: Output 'YES' as boolean in description.
	* Source/NSUserDefaults.m: Set 'YES' as boolean string.
	* Headers/Foundation/NSObject.h: Fix v dumb memory leak.
	* Source/GSHTTPURLHandle.m: Append crlf to separate headers from body
	rather than just an lf.
	* SSL: Renamed SSL class and source file to reflect the fact
	that the code is not unix specific.

2002-08-11  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Check for libxml version 2.3.0 or greater to ensure
	we have xpath support.